Changed transform:scale() into transform:martrix() to prevent blur on Safari

--- a/index.css
+++ b/index.css
@@ -198,11 +198,11 @@ p {
     margin-top: 2%;
     font-size: 28px;
     align-self: flex-start;
-    transform: scale(1);
+    transform: matrix(1, 0, 0, 1, 0, 0);
     transform-origin: 0px 50%;
     word-wrap: break-word;
     white-space: normal;
-    /* letter-spacing: 0.03rem; */ /*挺好的字间距变换效果，可惜会导致换行问题，故注释掉了*/
+    /* letter-spacing: 0.03rem; */ /*挺好的字间距变换效果，可惜会导致换行问题，故注释掉了 */
 }
 
 .lyrics div.highlight {
@@ -213,7 +213,7 @@ p {
     filter: none;
     /* width: 85%; */
     margin-top: 2%;
-    transform: scale(1.2);
+    transform: matrix(1.2, 0, 0, 1.2, 0, 0);
     transform-origin: 0px 50%;
     word-wrap: break-word;
     white-space: normal;
